DISCOVERY-1 Removed protected API in favor of simply documenting one endpoint with possible redirects that must be supported by the client.
Updated system information and echo models.
Updated specs and added support for Java 8 and 11 to pom files; defaults to Java 8 for now
Extracted request bodies and responses in separate models.
Added CXF client.
Added more info on the error message.
Combined system protocol, host, port, context into one url property instead.
Extracted request bodies and responses in separate models.
Updated schema.
Re-organize packages for generated code.
Added CXF client.
Updated spring boot to latest version.
Modified springboot stub to package it both as a jar and a boot jar."
Excluded old jaxrs dependency from swagger-jaxrs.
Renamed System model to SystemInfo to avoid class between java.lang.System and that class in clients and servers.
Added server mock with actual controller to respond quickly to API.
Added test cases to CXF client.
Added copyrights info
Separated the models from the client and server generation.
Added first attempt at a version interceptor that should get moved to a common repo.
Renamed Contact to ContactInfo in the spec.
Added protection against garbage client version